shipping-service-deployment.yaml
# Versi API Kubernetes yang digunakan untuk objek Deployment
apiVersion: apps/v1

# Jenis objek yang ingin kita buat adalah Deployment
kind: Deployment

# Metadata untuk Deployment, termasuk nama Deployment
metadata:
  name: shipping-service-deployment

# Spesifikasi untuk Deployment
spec:
  # Jumlah replika pod yang ingin dibuat (dalam hal ini, 1 pod)
  replicas: 1

  # Selector untuk menentukan pod mana yang akan dipengaruhi oleh Deployment
  selector:
    matchLabels:
      app: shipping-service

  # Template untuk pod yang akan dibuat oleh Deployment
  template:
    metadata:
      labels:
        # Label yang digunakan oleh selector untuk memilih pod
        app: shipping-service

    spec:
      # Spesifikasi untuk container dalam pod
      containers:
        - name: shipping-service
          # Nama container
          
          # Image Docker yang digunakan untuk container
          image: ghcr.io/nexiest/shipping-service:latest
          
          # Port yang akan di-expose oleh container
          ports:
            - containerPort: 3001
              # Port 3001 pada container akan di-forward ke luar
