istio-gateway.yaml
# Gateway Configuration
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: istio-gateway
spec:
  # Selector untuk menentukan ingress gateway Istio
  selector:
    istio: ingressgateway
  # Konfigurasi server pada port 80 dengan protokol HTTP
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    # Menetapkan host yang dapat diakses, dalam hal ini semua host ("*")
    hosts:
    - "*"

---
# VirtualService Configuration
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: istio
spec:
  # Menentukan host yang akan diatur oleh VirtualService, dalam hal ini semua host ("*")
  hosts:
  - "*"
  # Mengaitkan VirtualService dengan gateway yang telah didefinisikan sebelumnya ("istio-gateway")
  gateways:
  - istio-gateway
  # Konfigurasi rute HTTP
  http:
  - # Aturan pencocokan untuk URI yang tepat ("/order")
    match:
    - uri:
        exact: /order
    # Konfigurasi rute menuju service "order-service" pada port 3000
    route:
    - destination:
        host: order-service
        port:
          number: 3000  # Port dari order-service

---
# VirtualService Configuration
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: istio
spec:
  # Menentukan host yang akan diatur oleh VirtualService, dalam hal ini semua host ("*")
  hosts:
  - "*"
  # Mengaitkan VirtualService dengan gateway yang telah didefinisikan sebelumnya ("istio-gateway")
  gateways:
  - istio-gateway
  # Konfigurasi rute HTTP
  http:
  - # Aturan pencocokan untuk URI yang tepat ("/shipping")
    match:
    - uri:
        exact: /shipping
    # Konfigurasi rute menuju service "shipping-service" pada port 3001
    route:
    - destination:
        host: shipping-service
        port:
          number: 3001  # Port dari shipping-service
